# Netflix-Informe

./: CHANGELOG.md  LICENSE  Netflix-Informe.cabal  README.md
Informe/: index.html  style.css
app/: Main.hs
data/: netflix_titles_nov_2019.json
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: ETL.hs
