cabal-version:      3.0
name:               Netflix-Informe
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Nestor Morales
maintainer:         moralesnestoralejandro@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable Netflix-Informe
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >= 4.7 && < 5,
                      cassava,
                      bytestring,
                      containers,
                      vector
    hs-source-dirs:   app
    default-language: Haskell2010
